--- a/latest.html
+++ b/latest.html
@@ -12,7 +12,10 @@
   <!--video-js-->
   <link href="http://vjs.zencdn.net/4.9/video-js.css" rel="stylesheet">
   <script src="lib/video-js/video.49.js"></script>
-  
+
+  <!--Youtube Pluging-->
+  <script src="lib/video-js/vjs.youtube.js"></script>
+
   <!--RangeSlider Pluging-->
   <script src="lib/rangeslider.49.js"></script>
   <link href="lib/rangeslider.min.css" rel="stylesheet">
@@ -59,6 +62,24 @@
         <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
         <track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
       </video>
+      <br />
+      The same video, but with different annotations:
+      <br />
+      <video id="vid2" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
+      poster="http://video-js.zencoder.com/oceans-clip.png"
+      data-setup=''>
+        <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
+        <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
+        <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
+        <track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
+      </video>
+        <br />
+      And you could use youtube video:
+      <br />
+      <video id="vid3" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
+      data-setup='{"techOrder": ["html5","flash","youtube"]}'>
+        <source src="https://www.youtube.com/watch?v=YQl5SLEYGLA" type="video/youtube">
+      </video>
     </div>
 
     <script>
@@ -72,22 +93,21 @@
         store: {
           // The endpoint of the store on your server.
           //prefix: 'http://afstore.aws.af.cm/annotator',
-          prefix: 'http://danielcebrian.com/annotations/api',
+          prefix: 'http://localhost:3000/api',
           
-          annotationData: {uri:'http://danielcebrian.com/annotations/demo.html'},
+          annotationData: {uri:'http://localhost:8000/latest.html'},
 
-          /*urls: {
+          urls: {
             // These are the default URLs.
-            create:  '/create',
-            read:    '/read/:id',
-            update:  '/update/:id',
-            destroy: '/destroy/:id',
-            search:  '/search'
-          },*/
+            create:  '/annotations',
+            update:  '/annotations/:id',
+            destroy: '/annotations/:id',
+            search:  '/annotations/search'
+          },
           
           loadFromSearch:{
             limit:10000,
-            uri: 'http://danielcebrian.com/annotations/demo.html',
+            uri: 'http://localhost:8000/latest.html',
           }
         },
         richText: {
@@ -103,6 +123,7 @@
         share: {}, //Share plugin
         annotator: {}, //Annotator core
       },
+      optionsVideoJS: {techOrder: ["html5","flash","youtube"]},
       optionsRS: {},
         optionsOVA: {posBigNew:'none'/*,NumAnnotations:20*/},
       }
